--- a/phpstan.neon
+++ b/phpstan.neon
@@ -9,11 +9,14 @@ parameters:
         - database
         - routes
 
+    excludePaths:
+        - 'app/Http/Resources'
+
     # The level 9 is the highest level
-    level: 1
+    level: 3
 
     ignoreErrors:
-        - '#PHPDoc tag @var#'
+       
 
     parallel:
         maximumNumberOfProcesses: 4
