--- a/phpstan.neon
+++ b/phpstan.neon
@@ -13,7 +13,7 @@ parameters:
         - 'app/Http/Resources'
 
     # The level 9 is the highest level
-    level: 3
+    level: 6
 
     ignoreErrors:
        
@@ -23,3 +23,4 @@ parameters:
 
     noUnnecessaryCollectionCall: false
     checkMissingIterableValueType: false
+    checkGenericClassInNonGenericObjectType: false 
